# cloud-connectors

./: README.md  pyproject.toml
apps/: finhub.py
cloud_connectors/: google_sheets.py
cloud_connectors/apps/: finhub.py
cloud_connectors/connectors/: google_sheets.py
