[tool.poetry]
name = "cloud-connectors"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "cloud_connectors"}]

[tool.poetry.dependencies]
python = "^3.10"
gspread = "^6.1.2"
pandas = "^2.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
